ajout edit utilisateur

--- a/src/app/pages/utilisateur/utilisateur.component.html
+++ b/src/app/pages/utilisateur/utilisateur.component.html
@@ -107,6 +107,7 @@
                                 </td>
                                 <td> <button (click)="deleteUtilisateur(u.idUtilisateur)"
                                         style="background-color: chocolate; color: white;">Supprimer</button>
+                                    <button (click)="editUtilisateur(u)">Editer</button>
                                 </td>
                         </tbody>
                     </table>
