--- a/src/app/pages/utilisateur/utilisateur.component.html
+++ b/src/app/pages/utilisateur/utilisateur.component.html
@@ -5,14 +5,13 @@
             <div>
                 <div>
                     <div>
-                        <h3 style="color: chocolate;"><b>Ajout d'un utilisateur</b></h3>
+                        <h4 style="color: chocolate;">Ajout d'un utilisateur</h4>
                     </div>
                 </div>
             </div>
             <div class="card-body">
                 <form (ngSubmit)="saveUtilisateur()">
-                    <h4 class="heading-small text-muted mb-4"><b>Informations des utilisateurs</b>
-                    </h4>
+                    <h5 class="heading-small text-muted mb-4">Informations des utilisateurs</h5>
                     <div class="pl-lg-4">
                         <div class="row">
                             <div class="col-lg-6">
@@ -82,8 +81,24 @@
         <div class="col">
             <div class="card shadow">
                 <div class="card-header border-0">
-                    <h3 style="color: chocolate;"><b>Liste des utilisateurs</b></h3>
+                    <h4 style="color: chocolate;">Liste des utilisateurs</h4>
                 </div>
+                <!--Recherche-->
+                <form (ngSubmit)="onSubmit()">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="form-group">
+                                <input type="text" class="form-control" [(ngModel)]="nomUtilisateur"
+                                    name="nomUtilisateur" placeholder="Nom de la personne">
+                            </div>
+                            <div>
+                                <button type="submit" class="btn btn-primary btn-round"
+                                    style="background-color: chocolate">Recherche</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <!--Fin Recherche-->
                 <div class="table-responsive">
                     <table class="table align-items-center table-flush">
                         <thead class="thead-light">
@@ -97,7 +112,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let u of users">
+                            <tr *ngFor="let u of nomUtilisateurRecherche">
                                 <td>{{u.nomUtilisateur}}</td>
                                 <td>{{u.prenomUtilisateur}}</td>
                                 <td>{{u.username}}</td>
