--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
 
   <div class="col-lg-3 col-md-6 col-sm-6">
     <div class="card card-stats">
-      <a href="#affaire"> <!--Lien vers la page affaire-->
+      <a href="#affaires"> <!--Lien vers la page affaire-->
         <div class="card-body ">
           <div class="row">
             <div class="col-5 col-md-4">
