--- a/src/app/pages/taches/taches.component.html
+++ b/src/app/pages/taches/taches.component.html
@@ -109,6 +109,8 @@
                                         (click)="deleteTache(a.idTache)">Delete</button>
                                     <button class="btn btn-primary btn-round"
                                         (click)="editTache(a.idTache)">edit</button>
+                                    <button class="btn btn-primary btn-round" (click)="listPhase(a.idTache)">Voir les
+                                        phases</button>
                                 </td>
 
                             </tr>
